# lock-on

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
src/lock_on/: __init__.py  backtracker.py  base_manager.py  dpll.py  models.py  package_models.py  pubgrub.py  resolver.py
